--- a/site/_config.yml
+++ b/site/_config.yml
@@ -1,6 +1,6 @@
 title: Vonge
 baseurl: "/vonge-jekyll-bookshop-template"
-url: "https://mattbrown88.github.io"
+url: "https://matthewlbrown.com"
 
 plugins:
   - jekyll-bookshop
