--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Build site
         run: |
-          npm run build
+          BUNDLE_GEMFILE=site/Gemfile bundle exec jekyll build --source site --destination _site --trace
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
