--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vonge-jekyll-bookshop-template",
-  "private": true,
+  "private": false,
   "description": "Vonge template for CloudCannon",
   "scripts": {
     "bookshop": "bookshop-browser",
@@ -20,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/CloudCannon/vonge-jekyll-bookshop-template/issues"
   },
-  "homepage": "https://github.com/CloudCannon/vonge-jekyll-bookshop-template#readme",
+  "homepage": "https://mattbrown88.github.io/vonge-jekyll-bookshop-template/",
   "devDependencies": {
     "@bookshop/browser": "3.9.0",
     "@bookshop/jekyll-engine": "3.9.0",
@@ -28,6 +28,7 @@
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
-    "@bookshop/generate": "3.9.0"
+    "@bookshop/generate": "3.9.0",
+    "gh-pages": "^6.1.1"
   }
 }
