--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "bookshop-hosted": "bookshop-browser -b ./component-library -o site/js/bookshop-hosted.js",
     "bookshop-live": "bookshop-live -b ./component-library -o site/_cloudcannon/bookshop-live.js",
     "jekyll": "BUNDLE_GEMFILE=site/Gemfile bundle exec jekyll serve --source site --port 6060 --trace --unpublished",
-    "start": "run-p bookshop jekyll"
+    "start": "run-p bookshop jekyll",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d site"
   },
   "repository": {
     "type": "git",
